--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<h1>Spaghetti Recipe</h1>
 	
-	<h1>Ingredients</h1>
+	<h2>Ingredients</h2>
 	
 	<ul>
 		<li>Spaghetti</li>
@@ -19,7 +19,7 @@
 		<li>Water</li>
 	</ul>
 	
-	<h1>Instructions</h1>
+	<h2>Instructions</h2>
 	
 	<ol>
 		<li>Bring water to a boil.</li>
@@ -32,8 +32,7 @@
 		<li>Add marinara sauce to a pan, bringing to a simmer.</li>
 		<li>Mix cooked spaghetti with marinara sauce.</li>
 		<li>Enjoy!</li>
-	</ol>
-    <script type="text/javascript" src="./script.js">
+	</ol>="text/javascript" src="./script.js">
 </script>
 
 </body>
